--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGODB_URL = 'mongodb+srv://mavekepeter2022:1234@cluster0.3ngra.mongodb.net'
-CLERK_WEBHOOK_SECRET = ""
+MONGODB_URL = 'mongodb+srv://mavekepeter2022:1234@cluster0.kzo6j.mongodb.net'
+CLERK_WEBHOOK_SECRET = "whsec_5rI40oNolsGFmwsithnzuNx3zyKhpZTf"
